ndb - bug#53580 - part II (>= 6.3) - ndbrequire that we got what we asked for during mtoib